[package]
name = "actions-cli"
description = "GitHub Actions without JavaScript"
version = "0.1.0"
authors = ["zimbatm <zimbatm@zimbatm.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
