[package]
name = "action-cli"
description = "GitHub Actions without JavaScript"
version = "0.6.0"
authors = ["zimbatm <zimbatm@zimbatm.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
reqwest = { version = "0.10", features = ["blocking","json"] }
